objects/Order_Accuracy__c.object
<CustomObject>
    <description>This object is used in conjunction with the Launch object. IFS personnel enter/track how many times Sales to IFS launches result in missing or incorrect data for reporting to BPI.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>IF( ISBLANK( Launch__c ) ,  Case__r.Account.Name , Launch__r.Account__r.Name)</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Order_Specialist__c</fullName>
        <description>Booking Order Specialist from Launch (for email template)</description>
        <formula>Launch__r.Booking_OM__r.FirstName  &amp; &quot; &quot; &amp;  Launch__r.Booking_OM__r.LastName</formula>
        <label>Booking Order Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Order Accuracy</relationshipLabel>
        <relationshipName>Order_Accuracy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSC_Email__c</fullName>
        <label>DSC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DSM_DOS_Email__c</fullName>
        <label>DSM DOS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DSM_Email__c</fullName>
        <label>DSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DSM_Nat_Ent_DOS_Email__c</fullName>
        <label>DSM-Nat-Ent DOS Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DSM_Nat_Ent_Email__c</fullName>
        <label>DSM-Nat-Ent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <formula>IF( ISBLANK( Launch__c ) ,  Case__r.Dealer_Group_Name__c , Launch__r.Dealer_Group_Name__c)</formula>
        <label>Dealer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Services_Marketing_Strategist__c</fullName>
        <label>Digital Services Marketing Strategist</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Launch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Launch</label>
        <referenceTo>Launch__c</referenceTo>
        <relationshipLabel>Order Accuracy</relationshipLabel>
        <relationshipName>Order_Accuracy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MDA_Incorrect_Data_Count__c</fullName>
        <label>MDA - Incorrect Data Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDA_Incorrect_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MDA - Incorrect Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDA_Issue_Email_Text__c</fullName>
        <formula>IF( NOT(ISBLANK(MDA_Incorrect_Data_Count__c)) , TEXT(MDA_Incorrect_Data_Count__c) &amp; &quot; Incorrect Data; &quot; , &quot;&quot;) &amp;
 IF( NOT(ISBLANK( MDA_Missing_Data_Count__c )) , TEXT(MDA_Missing_Data_Count__c) &amp; &quot; Missing Data; &quot; , &quot;&quot;) &amp;
 IF( NOT(ISBLANK( MDA_Term_Issues_Count__c )) , TEXT(MDA_Term_Issues_Count__c ) &amp; &quot; Term Issue(s) ; &quot;, &quot;&quot;)</formula>
        <label>MDA Issue Email Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDA_Missing_Data_Count__c</fullName>
        <label>MDA - Missing Data Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDA_Missing_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MDA - Missing Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDA_Notes__c</fullName>
        <label>MDA Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDA_Term_Issues_Count__c</fullName>
        <label>MDA - Term Issues Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDA_Term_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MDA - Term Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Incorrect_Data_Count__c</fullName>
        <label>Order Form - Incorrect Data Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_Incorrect_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Form - Incorrect Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Issue_Email_Text__c</fullName>
        <formula>IF( NOT(ISBLANK(OF_Incorrect_Data_Count__c)) , TEXT(OF_Incorrect_Data_Count__c) &amp; &quot; Incorrect Data; &quot; , &quot;&quot;) &amp;
 IF( NOT(ISBLANK( OF_Missing_Data_Count__c )) , TEXT(OF_Missing_Data_Count__c) &amp; &quot; Missing Data; &quot; , &quot;&quot;) &amp;
 IF( NOT(ISBLANK( OF_Term_Issues_Count__c )) , TEXT(OF_Term_Issues_Count__c ) &amp; &quot; Term Issue(s) ; &quot;, &quot;&quot;)</formula>
        <label>Order Form Issue Email Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Missing_Data_Count__c</fullName>
        <label>Order Form - Missing Data Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_Missing_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Form - Missing Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Notes__c</fullName>
        <label>Order Form Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OF_Term_Issues_Count__c</fullName>
        <label>Order Form - Term Issues Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_Term_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Form - Term Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recap_Incorrect_Data_Count__c</fullName>
        <label>Recap - Incorrect Data Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recap_Incorrect_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recap - Incorrect Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recap_Issues_Email_Text__c</fullName>
        <formula>IF( NOT(ISBLANK(Recap_Incorrect_Data_Count__c)) , TEXT(Recap_Incorrect_Data_Count__c) &amp; &quot; Incorrect Data; &quot; , &quot;&quot;) &amp;
IF( NOT(ISBLANK( Recap_Missing_Data_Count__c )) , TEXT(Recap_Missing_Data_Count__c) &amp; &quot; Missing Data; &quot; , &quot;&quot;)</formula>
        <label>Recap Issues Email Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recap_Missing_Data_Count__c</fullName>
        <label>Recap - Missing Data Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recap_Missing_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recap - Missing Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recap_Notes__c</fullName>
        <label>Recap Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Order Accuracy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Launch__c</columns>
        <columns>Account__c</columns>
        <columns>Dealer_Group__c</columns>
        <columns>DSM_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OA-{00000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Accuracy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MDA_Incorrect_Count_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>MDA_Incorrect_Data__c == True &amp;&amp;  
ISBLANK( MDA_Incorrect_Data_Count__c )</errorConditionFormula>
        <errorDisplayField>MDA_Incorrect_Data_Count__c</errorDisplayField>
        <errorMessage>&quot;MDA Incorrect Data Count&quot; needs to be defined if &quot;MDA Incorrect Data&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDA_Incorrect_Count_Validation</fullName>
        <active>true</active>
        <description>Count field must be between 1 and 99.</description>
        <errorConditionFormula>MDA_Incorrect_Data_Count__c &lt; 1 
||  
MDA_Incorrect_Data_Count__c &gt; 99</errorConditionFormula>
        <errorDisplayField>MDA_Incorrect_Data_Count__c</errorDisplayField>
        <errorMessage>Count values must be be a number between 1 and 99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDA_Incorrect_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( MDA_Incorrect_Data_Count__c )) &amp;&amp;
MDA_Incorrect_Data__c == False</errorConditionFormula>
        <errorDisplayField>MDA_Incorrect_Data__c</errorDisplayField>
        <errorMessage>&quot;MDA Incorrect Data&quot; needs to be checked if &quot;MDA Incorrect Data Count&quot; is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDA_Missing_Count_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>MDA_Missing_Data__c  == True &amp;&amp;  
ISBLANK(  MDA_Missing_Data_Count__c  )</errorConditionFormula>
        <errorDisplayField>MDA_Missing_Data_Count__c</errorDisplayField>
        <errorMessage>&quot;MDA Missing Data Count&quot; needs to be defined if &quot;MDA Missing Data&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDA_Missing_Count_Validation</fullName>
        <active>true</active>
        <description>Count field must be between 1 and 99.</description>
        <errorConditionFormula>MDA_Missing_Data_Count__c  &lt; 1 
||   
MDA_Missing_Data_Count__c &gt; 99</errorConditionFormula>
        <errorDisplayField>MDA_Missing_Data_Count__c</errorDisplayField>
        <errorMessage>Count values must be be a number between 1 and 99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDA_Missing_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( MDA_Missing_Data_Count__c )) &amp;&amp;
MDA_Missing_Data__c == False</errorConditionFormula>
        <errorDisplayField>MDA_Missing_Data__c</errorDisplayField>
        <errorMessage>&quot;MDA Missing Data&quot; needs to be checked if &quot;MDA Missing Data Count&quot; is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDA_Term_Issue_Count_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>MDA_Term_Issues__c   == True &amp;&amp;  
ISBLANK(   MDA_Term_Issues_Count__c   )</errorConditionFormula>
        <errorDisplayField>MDA_Term_Issues_Count__c</errorDisplayField>
        <errorMessage>&quot;MDA Term Issues Count&quot; needs to be defined if &quot;MDA Term Issue&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDA_Term_Issue_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(   MDA_Term_Issues_Count__c  )) &amp;&amp;
MDA_Term_Issues__c   == False</errorConditionFormula>
        <errorDisplayField>MDA_Term_Issues__c</errorDisplayField>
        <errorMessage>&quot;MDA Term Issues&quot; needs to be checked if &quot;MDA Term Issue Count&quot; is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MDA_Term_Issues_Count_Validation</fullName>
        <active>true</active>
        <description>Count field must be between 1 and 99.</description>
        <errorConditionFormula>MDA_Term_Issues_Count__c   &lt; 1 
||   
MDA_Term_Issues_Count__c    &gt; 99</errorConditionFormula>
        <errorDisplayField>MDA_Term_Issues_Count__c</errorDisplayField>
        <errorMessage>Count values must be be a number between 1 and 99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_Incorrect_Count_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>OF_Incorrect_Data__c == True &amp;&amp;  
ISBLANK( OF_Incorrect_Data_Count__c )</errorConditionFormula>
        <errorDisplayField>OF_Incorrect_Data_Count__c</errorDisplayField>
        <errorMessage>&quot;OF Incorrect Data Count&quot; needs to be defined if &quot;OF Incorrect Data&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_Incorrect_Count_Validation</fullName>
        <active>true</active>
        <description>Count field must be between 1 and 99.</description>
        <errorConditionFormula>OF_Incorrect_Data_Count__c   &lt; 1 
||  
OF_Incorrect_Data_Count__c  &gt; 99</errorConditionFormula>
        <errorDisplayField>OF_Incorrect_Data_Count__c</errorDisplayField>
        <errorMessage>Count values must be be a number between 1 and 99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_Incorrect_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( OF_Incorrect_Data_Count__c )) &amp;&amp;
OF_Incorrect_Data__c == False</errorConditionFormula>
        <errorDisplayField>OF_Incorrect_Data__c</errorDisplayField>
        <errorMessage>&quot;OF Incorrect Data&quot; needs to be checked if &quot;OF Incorrect Data Count&quot; is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_Missing_Count_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>OF_Missing_Data__c  == True &amp;&amp;  
ISBLANK(  OF_Missing_Data_Count__c  )</errorConditionFormula>
        <errorDisplayField>OF_Missing_Data_Count__c</errorDisplayField>
        <errorMessage>&quot;OF Missing Data Count&quot; needs to be defined if &quot;OF Missing Data&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_Missing_Count_Validation</fullName>
        <active>true</active>
        <description>Count field must be between 1 and 99.</description>
        <errorConditionFormula>OF_Missing_Data_Count__c  &lt; 1 
||  
OF_Missing_Data_Count__c  &gt; 99</errorConditionFormula>
        <errorDisplayField>OF_Missing_Data_Count__c</errorDisplayField>
        <errorMessage>Count values must be be a number between 1 and 99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_Missing_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( OF_Missing_Data_Count__c )) &amp;&amp;
OF_Missing_Data__c == False</errorConditionFormula>
        <errorDisplayField>OF_Missing_Data__c</errorDisplayField>
        <errorMessage>&quot;OF Missing Data&quot; needs to be checked if &quot;OF Missing Data Count&quot; is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_Term_Issue_Count_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>OF_Term_Issues__c   == True &amp;&amp;  
ISBLANK(   OF_Term_Issues_Count__c   )</errorConditionFormula>
        <errorDisplayField>OF_Term_Issues_Count__c</errorDisplayField>
        <errorMessage>&quot;OF Term Issues Count&quot; needs to be defined if &quot;OF Term Issue&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_Term_Issue_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(   OF_Term_Issues_Count__c  )) &amp;&amp;
OF_Term_Issues__c   == False</errorConditionFormula>
        <errorDisplayField>OF_Term_Issues__c</errorDisplayField>
        <errorMessage>&quot;OF Term Issues&quot; needs to be checked if &quot;OF Term Issue Count&quot; is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_Term_Issues_Count_Validation</fullName>
        <active>true</active>
        <description>Count field must be between 1 and 99.</description>
        <errorConditionFormula>OF_Term_Issues_Count__c    &lt; 1 
||  
 OF_Term_Issues_Count__c   &gt; 99</errorConditionFormula>
        <errorDisplayField>OF_Term_Issues_Count__c</errorDisplayField>
        <errorMessage>Count values must be be a number between 1 and 99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_checkbox_must_be_checked</fullName>
        <active>true</active>
        <description>Ensure at least one checkbox is checked</description>
        <errorConditionFormula>MDA_Missing_Data__c == False &amp;&amp;
MDA_Incorrect_Data__c == False &amp;&amp; 
MDA_Term_Issues__c  == False &amp;&amp; 
OF_Incorrect_Data__c == False &amp;&amp; 
OF_Missing_Data__c == False &amp;&amp; 
OF_Term_Issues__c == False &amp;&amp; 
Recap_Incorrect_Data__c  == False &amp;&amp; 
Recap_Missing_Data__c == False</errorConditionFormula>
        <errorMessage>At least one checkbox must be checked!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Accuracy_Linked2_Launch_Case</fullName>
        <active>true</active>
        <description>Ensure Order Accuracy is linked either to Launch or Case record</description>
        <errorConditionFormula>ISBLANK( Case__c ) &amp;&amp;  ISBLANK( Launch__c )</errorConditionFormula>
        <errorDisplayField>Launch__c</errorDisplayField>
        <errorMessage>Order Accuracy must be linked to either a Launch record or a Case record!!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recap_Incorrect_Count_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>Recap_Incorrect_Data__c == True &amp;&amp;  
ISBLANK( Recap_Incorrect_Data_Count__c )</errorConditionFormula>
        <errorDisplayField>Recap_Incorrect_Data_Count__c</errorDisplayField>
        <errorMessage>&quot;Recap Incorrect Data Count&quot; needs to be defined if &quot;Recap Incorrect Data&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recap_Incorrect_Count_Validation</fullName>
        <active>true</active>
        <description>Count field must be between 1 and 99.</description>
        <errorConditionFormula>Recap_Incorrect_Data_Count__c &lt; 1 
||  
Recap_Incorrect_Data_Count__c &gt; 99</errorConditionFormula>
        <errorDisplayField>Recap_Incorrect_Data_Count__c</errorDisplayField>
        <errorMessage>Count values must be be a number between 1 and 99</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recap_Incorrect_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( Recap_Incorrect_Data_Count__c )) &amp;&amp;
Recap_Incorrect_Data__c == False</errorConditionFormula>
        <errorDisplayField>Recap_Incorrect_Data__c</errorDisplayField>
        <errorMessage>&quot;Recap Incorrect Data&quot; needs to be checked if &quot;Recap Incorrect Data Count&quot; is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recap_Missing_Count_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>Recap_Missing_Data__c  == True &amp;&amp;  
ISBLANK(   Recap_Missing_Data_Count__c   )</errorConditionFormula>
        <errorDisplayField>Recap_Missing_Data_Count__c</errorDisplayField>
        <errorMessage>&quot;Recap Missing Data Count&quot; needs to be defined if &quot;Recap Missing Data&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recap_Missing_Not_Set</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( Recap_Missing_Data_Count__c )) &amp;&amp;
Recap_Missing_Data__c == False</errorConditionFormula>
        <errorDisplayField>Recap_Missing_Data__c</errorDisplayField>
        <errorMessage>&quot;Recap Missing Data&quot; needs to be checked if &quot;Recap Missing Data Count&quot; is set.</errorMessage>
    </validationRules>
</CustomObject>